# indico-checkin-webhook-plugin

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
example_printservice/: example_printservice.py
indico_checkin_webhook/: __init__.py  blueprint.py  controllers.py  forms.py  plugin.py  views.py
indico_checkin_webhook/migrations/: 20171129_0907_a40f748cad06_initial_data.py
indico_checkin_webhook/models/: printcheckin.py
