[metadata]
    name = indico-plugin-checkin-webhook
    description = Print plugin that triggers a webhook on checkin
    url = https://github.com/
    license = https://www.gnu.org/licenses/gpl-3.0.txt 
    author = Indico Team@MLZ
    author_email = bjoern.pedersen@frm2.tum.de 
    classifiers = 
        Environment :: Plugins', 'Environment :: Web Environment
        License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
        Programming Language :: Python :: 2.7
[options]
    packages=find:
    zip_safe=False
    include_package_data=True
    use_scm_version=True
    setup_requires= 
            setuptools_scm
    install_requires=
        indico>=3.1
[options.entry_points] 
    indico.plugins = 
            checkin_webhook = indico_checkin_webhook.plugin:CheckinWebhookPlugin
[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
